<resources>
    <string name="app_name">土星云网盘</string>
    <string name="app_icon_name">土星云\n企业网盘</string>
    <string name="app_full_name">土星云企业网盘</string>
    <!-- register Activity    -->
    <string name="公司名称">comp_name</string>
    <string name="公司联系邮箱">comp_con_email</string>
    <string name="公司联系电话">comp_con_tel</string>
    <string name="test">test</string>
    <string name="test_email">916094751@qq.com</string>
    <string name="add_members">添加成员</string>
    <string name="team_name">团队名称</string>

    <string name="member_name">成员名称</string>
    <string name="team_level">团队等级</string>




    <string name="team_test">team_test</string>
    <string name="member_test">member_test</string>
    <string name="iv_back_des">back_icon</string>
    <string name="myfile">我的文件</string>
    <string name="edit">编辑</string>
    <string name="iv_search__des">search_icon</string>
    <string name="service_agreement">我已阅读<font color="#0077FF">《服务协议》</font></string>
</resources>
